@@ -1,6 +1,6 @@
 {
   "name": "simp-gnome",
-  "version": "6.0.1",
+  "version": "6.0.2",
   "author": "SIMP Team",
   "summary": "provides useful settings to set up GNOME.",
   "license": "Apache-2.0",
